[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyW800rf32"
version = "0.4"
authors = [
  { name="George Farris", email="farrisg@gmsys.com" },
]
description = "A library to communicate with the W800rf32 family of devices"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Operating System :: OS Independent",
]

dependencies = [
    "pyserial >= 3.1",
]

[project.urls]
"Homepage" = "https://github.com/horga83/pyW800rf32"
"Bug Tracker" = "https://github.com/horga83/pyW800rf32/issues"

